--- a/basePresentar_AAA/src/basepresentar_aaa/TransaCola.form
+++ b/basePresentar_AAA/src/basepresentar_aaa/TransaCola.form
@@ -43,7 +43,7 @@
                       <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="54" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -104,6 +104,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNombrePublicacion">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="pub_cola_"/>
+      </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
 
@@ -221,13 +224,11 @@
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jScrollPane2" min="-2" pref="412" max="-2" attributes="0"/>
-                  <EmptySpace pref="55" max="32767" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="1" attributes="0">
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Component id="jButton3" min="-2" pref="78" max="-2" attributes="0"/>
+                      <Component id="jScrollPane2" min="-2" pref="412" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jButton3" min="-2" pref="78" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
